第二次提交项目，增加了商品详情页

--- a/TCL/html/login.html
+++ b/TCL/html/login.html
@@ -40,7 +40,7 @@
 				<p class="login-btn"><a href="">登录</a></p>
 				<p class="o-methds">
 					<a href="">短信验证登录</a>
-					<a href="">注册TCL账号</a>
+					<a href="register.html">注册TCL账号</a>
 					<a href="">找回密码</a>
 				</p>
 			</div>
