--- a/TCL/js/json.html
+++ b/TCL/js/json.html
@@ -128,7 +128,7 @@
 			,{
 				img:`images/banner/header/xy3.jpg`,
 				title:`TCL8公斤裙子的波轮洗衣机`,
-				cprice:`1099.00元`
+				price:`1099.00元`
 			}
 			]
 		},
