--- a/html/register.html
+++ b/html/register.html
@@ -31,8 +31,8 @@
 				</div>
 				<p class="login-btn"><a href="">注册</a></p>
 				<p class="o-methds">
-					<a href="">已有账号直接登录</a>
-					<a href="">推荐第三方登录</a>
+					<a href="login.html">已有账号直接登录</a>
+					<a href="login.html">推荐第三方登录</a>
 				</p>
 			</div>
 		</div>
