--- a/html/register.html
+++ b/html/register.html
@@ -6,11 +6,43 @@
 	<link rel="stylesheet" href="../iconfont/iconfont.css">
 	<link rel="stylesheet" href="../css/login.css">
 	<script src = '../js/require.js' async="true" defer data-main = "../js/main-register.js"></script>
+	<script src="../js/jquery-1.11.3.js"></script>
+	<script>
+		$(function(){
+			var oBtn = $("#btn");
+			var oUsername = $("#username");
+			var oPassword = $("#password");
+				oBtn.click(function(){
+					//登录
+					//1、拿到输入框的数据  查询字符串  name1=value1&name2=value2
+					var str = `${oUsername.attr("name")}=${oUsername.val()}&${oPassword.attr("name")}=${oPassword.val()}`;
+					alert(str);
+
+					//2、通过ajax发送数据到php页面
+					$.ajax({
+						method: 'post',
+						url: "../php/register.php",
+						data: str,
+						success: function(data){
+							alert(data);
+							if(data == "注册成功"){
+								window.location = "login.html";
+							}
+						},
+						error: function(msg){
+							alert(msg);
+						}
+
+					})
+				})
+		})
+
+	</script>
 </head>
 <body>
 	<div class="headerBox">
 		<p class="header">
-			<a href="">
+			<a href="../index.html">
 				<img src="../images/login/logo.png" alt="">
 			</a>
 			<span class="crumb">TCL账号登录</span>
@@ -22,15 +54,15 @@
 				<p class="log-title">注册TCL账号</p>
 				<div class="fm-group pr">
 					<span class="iconfont ikyuser pa iky01">&#xe674;</span>
-					<input type="text" placeholder="手机号 / 邮箱 / 用户名" class="linfo" id="phone">
+					<input type="text" placeholder="手机号 / 邮箱 / 用户名" class="linfo" id="username" name="username">
 					<span style="color: red"></span>
 				</div>
 				<div class="fm-group pr">
 					<span class="iconfont ikyuser pa iky01">&#xe643;</span>
-					<input type="password" placeholder="登录密码" class="linfo" id="password">
+					<input type="password" placeholder="登录密码" class="linfo" id="password" name="password">
 					<span style="color: red"></span>
 				</div>
-				<p class="login-btn"><a href="">注册</a></p>
+				<p class="login-btn"><strong id="btn">注册</strong></p>
 				<p class="o-methds">
 					<a href="login.html">已有账号直接登录</a>
 					<a href="login.html">推荐第三方登录</a>
