第六次提交，增加了结算页，进入收尾阶段

--- a/TCL/html/shop.html
+++ b/TCL/html/shop.html
@@ -25,15 +25,15 @@
 					<ul class="top-bar-right">
 						<li><a href="">微信商城</a><i></i></li>
 						<li><a href="">购物车</a><span>( 0 )</span><i></i></li>			
-						<li><a href="">注册</a><i></i></li>
-						<li><a href="">登录</a></li>
+						<li><a href="register.html">注册</a><i></i></li>
+						<li><a href="login.html">登录</a></li>
 					</ul>
 				</div>
 				<div class="nav">
 					<div class="nav-bor">
 						<div class="menu-wrap">
 							<h1 class="hea-box f1">
-								<a href="" class="logo"><img src="../images/login/logo.png" alt=""></a>
+								<a href="../index.html" class="logo"><img src="../images/login/logo.png" alt=""></a>
 							</h1>
 							&nbsp;&nbsp;&nbsp;
 							<span class="headername">我的购物车</span>
