--- a/index.html
+++ b/index.html
@@ -228,12 +228,11 @@
 					</div>					
 				</div> -->
 				
-				<ul class="float_nav" style="top: 33.5px; display: block;">
+				<ul class="float_nav" style="top: 33.5px; ">
 					<li><a href="">电视</a></li>
 					<li><a href="">洗衣机</a></li>
 					<li><a href="">冰箱</a></li>
 					<li><a href="">空调</a></li>
-					<li><a href="">厨房用品</a></li>
 				</ul>
 
 			</div>
