第八次提交，修改了登录注册，解决了cookie最后一条数据删不去的bug

--- a/TCL/index.html
+++ b/TCL/index.html
@@ -135,10 +135,10 @@
 					<li></li>
 				</ol>
 				<ul class="banner-content">
-					<!-- <li><a href=""><img src="images/banner/1.jpg" alt=""></a></li>
+					<li><a href=""><img src="images/banner/1.jpg" alt=""></a></li>
 					<li><a href=""><img src="images/banner/2.jpg" alt=""></a></li>
 					<li><a href=""><img src="images/banner/3.jpg" alt=""></a></li>
-					<li><a href=""><img src="images/banner/1.jpg" alt=""></a></li> -->
+					<li><a href=""><img src="images/banner/1.jpg" alt=""></a></li>
 				</ul>
 				<div class="icon">
 					<a href="" class="iconfont prev">&#xe57e;</a>
