--- a/shop.html
+++ b/shop.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Document</title>
-		<link rel="stylesheet" href="../css/shop.css">
-		<link rel="stylesheet" href="../iconfont/iconfont.css">
-		<script src = '../js/require.js' async="true" defer data-main = "../js/main-shop"></script>
+		<link rel="stylesheet" href="css/shop.css">
+		<link rel="stylesheet" href="iconfont/iconfont.css">
+		<script src = 'js/require.js' async="true" defer data-main = "js/main-shop"></script>
 	</head>
 	<body>
 		<!-- header -->
@@ -33,7 +33,7 @@
 					<div class="nav-bor">
 						<div class="menu-wrap">
 							<h1 class="hea-box f1">
-								<a href="../index.html" class="logo"><img src="../images/login/logo.png" alt=""></a>
+								<a href="index.html" class="logo"><img src="images/login/logo.png" alt=""></a>
 							</h1>
 							&nbsp;&nbsp;&nbsp;
 							<span class="headername">我的购物车</span>
@@ -61,7 +61,7 @@
 				<!-- <dl class="materials-box">
 					<dd class="shop-item sel-wid"><input type="checkbox></dd>
 					<dd class="shop-item pro-wid">
-						<span class="left"><a href=""><img src="../images/login/success.png" alt=""></a></span>
+						<span class="left"><a href=""><img src="images/login/success.png" alt=""></a></span>
 						<span class="right"><p>65Q960C 65英寸QLED量子点剧院电视</p></span>
 					</dd>
 					<dd class="shop-item pri-wid"><span>6999.00元</span></dd>
@@ -132,7 +132,7 @@
 				</dl>
 				<dl>
 					<dt>帮助中心</dt>
-					<dd><img src="../images/footer/wechat.jpg" alt=""></dd>
+					<dd><img src="images/footer/wechat.jpg" alt=""></dd>
 				</dl>
 				<div class="last-r">
 					<p class="phone red">4008-123456</p>
@@ -160,7 +160,7 @@
 					<a href="">隐私保护</a>
 				</p>
 				<p>
-					<a href=""><img src="../images/footer/beian.png" alt="">粤网公安备案44133002100088号</a>
+					<a href=""><img src="images/footer/beian.png" alt="">粤网公安备案44133002100088号</a>
 				</p>
 				<div class="foot-r">
 					<div class="language">
@@ -169,7 +169,7 @@
 					</div>
 				</div>
 				<div class="AC">
-					<div><img  src="../images/footer/credibility.png" alt=""></div>
+					<div><img  src="images/footer/credibility.png" alt=""></div>
 				</div>
 			</div>
 		</div>
