--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 					</ul>
 					<ul class="top-bar-right">
 						<li><a href="">微信商城</a><i></i></li>
-						<li><a href="html/shop.html">购物车</a><span>( 0 )</span><i></i></li>			
-						<li><a href="html/register.html">注册</a><i></i></li>
-						<li><a href="html/login.html">登录</a></li>
+						<li><a href="shop.html">购物车</a><span>( 0 )</span><i></i></li>			
+						<li><a href="register.html">注册</a><i></i></li>
+						<li><a href="login.html">登录</a></li>
 					</ul>
 				</div>
 
