--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
 				<div class="nav">
 					<div class="nav-content">
 						<h1>
-							<a href="" class="iconfont logo">&#xe639;</a>
+							<a href="index.html" class="iconfont logo">&#xe639;</a>
 						</h1>
 						<div class="nav-left">
 							<div class="title">
@@ -210,11 +210,11 @@
 					</div>
 					<div id="y_servicebox">
 						<ul class="y_servicetab">
-							<li class="active">物流配送</li>
+							<!-- <li class="active">物流配送</li>
 							<li>商品签收</li>
 							<li>产品安装</li>
 							<li>发票</li>
-							<li>售后服务</li>
+							<li>售后服务</li> -->
 						</ul>
 						<div id="y_sercecontent">
 							<div><img src="images/product/s1.jpg" alt=""></div>
